# zBot

./: .gitignore  CMakeLists.txt  README.md  about.md  build.bat  mod.json
.github/workflows/: build.yml
cmake/: patch_gd_imgui_cocos.cmake
src/: clickbetweenframescompat.cpp  gui.cpp  gui.hpp  keybinds.cpp  physicsbypass.cpp  playbackmanager.cpp  recordmanager.cpp  replay.hpp  speedhackaudio.cpp  zBot.cpp  zBot.hpp
src/autobot/: AutoBot.hpp  AutoBotDebug.hpp  AutoBotHooks.cpp  AutoBotModel.hpp  AutoBotPlanner.hpp
